--- a/Index.html
+++ b/Index.html
@@ -10,6 +10,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
+    <!--Font Awsone-->
+
+    <script src="https://kit.fontawesome.com/66735e3f01.js"></script>
+
+
     <!-- Estilos Propios -->
 
     <link rel="stylesheet" href="css/Style.css">
@@ -19,30 +24,47 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-success">
+    <div class="container_fluid">
+        <header id="cabecera">
+            <div class="cabecera_arriba">
+                <div class="container">
+                    <div class="row">
+                        <!--Lado Izquierdo del cabezado-->
+                        <div class="col-xs-12 col-sm-4">
+                            <div class="cabecera-arriba-izquierda">
+                                <div class="contacto">
+                                    <i class="fas fa-id-card"></i>
+                                    <span class="hidden-xs hidden-sm hidden-md">Si quieres Mas info llena el formulario
+                                        <a href="">aca</a></span>
+                                </div>
+                            </div>
+                        </div>
 
-        <a class="navbar-brand nav_logo" href="#"><img src="Img/logo-nav.png" class="d-inline-block logo" alt="">Name</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto" style="margin-right: 10px;">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+                        <div class="col-xs-12 col-sm-8">
+                            <ul class="cabecera-arriba-dere text-right">
+                                <li class="cuenta">
+                                    <i class="far fa-user-circle" style="font-size: 20px;"></i>
+                                    <a href="#">Mi Cuenta</a>
+                                </li>
+                                <li class="lenguaje-Drop">
+                                <li class="language dropdown"> <span class="dropdown-toggle" id="dropdownMenu1"
+                                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
+                                        role="button">Languaje <span class="caret"></span> </span>
+                                    <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                                        <li><a href="#">Español</a></li>
+                                        <li><a href="#">Ingles</a></li>
+                                        <li><a href="#">Portugues</a></li>
+                                    </ul>
+                                </li>
+                                </li>
+                            </ul>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </header>
+    </div>
 
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
