--- a/Index.html
+++ b/Index.html
@@ -86,6 +86,7 @@
 
             <div class="cabecera_abajo">
                 <div class="container">
+                    <!--Row Header Abajo -->
                     <div class="row">
 
                         <!--Buscador-->
@@ -110,8 +111,8 @@
                         </div>
                         <!--Carrito Compras-->
                         <div class="col-xs-6 col-sm-4 carrito">
-                            <div id="div-carro" class="btn-group btn-block mtb_40 text-center"  >
-                                <button type="button" class="btn boton-sin-outline" data-target="#dropdown-carrito" 
+                            <div id="div-carro" class="btn-group btn-block mtb_40 text-center">
+                                <button type="button" class="btn boton-sin-outline" data-target="#dropdown-carrito"
                                     data-toggle="collapse" aria-expanded="true"><span id="carrito-compra">Carrito de
                                         Compra</span><span id="carrito-total">items (3)</span> </button>
                             </div>
@@ -121,9 +122,8 @@
                                         <table class="table table-striped">
                                             <tbody>
                                                 <tr>
-                                                    <td class="text-center"><a href="#"><img
-                                                                src="images/product/70x84.jpg" alt="iPod Classic"
-                                                                title="iPod Classic"></a></td>
+                                                    <td class="text-center"><a href="#"><img src="img/Producto 1.png"
+                                                                alt="iPod Classic" title="iPod Classic"></a></td>
                                                     <td class="text-left product-name"><a href="#">MacBook Pro</a> <span
                                                             class="text-left price">$20.00</span>
                                                         <input class="cart-qty" name="product_quantity" min="1"
@@ -133,9 +133,8 @@
                                                                 class="fa fa-times-circle"></i></a></td>
                                                 </tr>
                                                 <tr>
-                                                    <td class="text-center"><a href="#"><img
-                                                                src="images/product/70x84.jpg" alt="iPod Classic"
-                                                                title="iPod Classic"></a></td>
+                                                    <td class="text-center"><a href="#"><img src="img/producto2.jpg"
+                                                                alt="iPod Classic" title="iPod Classic"></a></td>
                                                     <td class="text-left product-name"><a href="#">MacBook Pro</a> <span
                                                             class="text-left price">$20.00</span>
                                                         <input class="cart-qty" name="product_quantity" min="1"
@@ -144,6 +143,8 @@
                                                     <td class="text-center"><a class="close-cart"><i
                                                                 class="fa fa-times-circle"></i></a></td>
                                                 </tr>
+
+
                                             </tbody>
                                         </table>
                                     </li>
@@ -154,7 +155,7 @@
                                                     <td class="text-right"><strong>Sub-Total</strong></td>
                                                     <td class="text-right">$2,100.00</td>
                                                 </tr>
-                                              
+
                                                 <tr>
                                                     <td class="text-right"><strong>IVA (21%)</strong></td>
                                                     <td class="text-right">$20.00</td>
@@ -178,7 +179,42 @@
                             </div>
                         </div>
 
+
                     </div>
+                    <!-- Termina Row Header Abajo -->
+
+                    <!--Empieza El NavBar-->
+
+                    <nav class="navbar navbar-expand-lg navbar-light nav1">
+                            <a class="navbar-brand" href="#">Navbar</a>
+                            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                              <span class="navbar-toggler-icon"></span>
+                            </button>
+                            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                              <ul class="navbar-nav">
+                                <li class="nav-item active">
+                                  <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                                </li>
+                                <li class="nav-item">
+                                  <a class="nav-link" href="#">Features</a>
+                                </li>
+                                <li class="nav-item">
+                                  <a class="nav-link" href="#">Pricing</a>
+                                </li>
+                                <li class="nav-item dropdown">
+                                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    Dropdown link
+                                  </a>
+                                  <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                    <a class="dropdown-item" href="#">Action</a>
+                                    <a class="dropdown-item" href="#">Another action</a>
+                                    <a class="dropdown-item" href="#">Something else here</a>
+                                  </div>
+                                </li>
+                              </ul>
+                            </div>
+                          </nav>
+
                 </div>
             </div>
 
