--- a/Index.html
+++ b/Index.html
@@ -32,7 +32,7 @@
             <div class="cabecera_arriba">
                 <div class="container">
                     <div class="row">
-                        <!--Lado Izquierdo del cabezado-->
+                        <!--Lado Izquierdo del cabezado No abrir
                         <div class="col-xs-12 col-sm-4">
                             <div class="cabecera-arriba-izquierda">
                                 <div class="contacto">
@@ -41,17 +41,21 @@
                                         <a href="">aca</a></span>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
 
-                        <div class="col-xs-12 col-sm-8">
+                        <div class="col-xs-12 col-sm-12">
                             <ul class="cabecera-arriba-dere text-right">
                                 <li class="cuenta text-center">
-                                    <a href="#" class="text-center">Ayuda & FAQ</a>
+                                    <a href="#" class="text-center">Contacto</a>
+                                </li>
+                                <li class="cuenta text-center">
+                                    <a href="#" class="text-center">FAQ</a>
                                 </li>
                                 <li class="cuenta">
                                     <a href="#" class="text-center">Mi Cuenta</a>
                                 </li>
-                                <li class="lenguaje-Drop">
+                                <!-- menu de idiomas y cambio no abrir 
+                                 <li class="lenguaje-Drop">
                                 <li class="language dropdown"> <span class="dropdown-toggle" id="dropdownMenu1"
                                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
                                         role="button">Lenguaje <span class="caret"></span> </span>
@@ -74,7 +78,7 @@
                                         <li><a href="#">R$ Reales Brasileños</a></li>
                                     </ul>
                                 </li>
-                                </li>
+                                </li> -->
                             </ul>
                         </div>
 
@@ -91,7 +95,7 @@
 
                         <!--Buscador-->
 
-                        <div class="col-xs-12 col-sm-4">
+                        <div class="col-12 col-sm-4">
                             <div class="buscador mt_40">
                                 <input id="search-input" name="search" value="" placeholder="Search"
                                     class="form-control input-lg" autocomplete="off" type="text">
@@ -104,16 +108,17 @@
                             </div>
                         </div>
                         <!--Logo-->
-                        <div class="navbar-cabeza col-xs-6 col-sm-4">
+                        <div class="navbar-cabeza col-12 col-sm-4">
                             <a href="Index.html" class="navbar-brand">
                                 <img src="img/Logo Tienda2.png" alt="">
                             </a>
                         </div>
                         <!--Carrito Compras-->
-                        <div class="col-xs-6 col-sm-4 carrito">
+                        <div class="col-12 col-sm-4 carrito">
                             <div id="div-carro" class="btn-group btn-block mtb_40 text-center">
-                                <button type="button" class="btn boton-sin-outline" data-target="#dropdown-carrito"
-                                    data-toggle="collapse" aria-expanded="true"><span id="carrito-compra">Carrito de
+
+                                <button type="button" class="btn" data-target="#dropdown-carrito" data-toggle="collapse"
+                                    aria-expanded="true"><span id="carrito-compra">Carrito de
                                         Compra</span><span id="carrito-total">items (3)</span> </button>
                             </div>
                             <div id="dropdown-carrito" class="cart-menu collapse">
@@ -181,44 +186,83 @@
 
 
                     </div>
-                    <!-- Termina Row Header Abajo -->
+                    <!--Termina Row Header Abajo-->
 
                     <!--Empieza El NavBar-->
 
                     <nav class="navbar navbar-expand-lg navbar-light nav1">
-                            <a class="navbar-brand" href="#">Navbar</a>
-                            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                              <span class="navbar-toggler-icon"></span>
-                            </button>
-                            <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                              <ul class="navbar-nav">
-                                <li class="nav-item active">
-                                  <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                                </li>
-                                <li class="nav-item">
-                                  <a class="nav-link" href="#">Features</a>
-                                </li>
-                                <li class="nav-item">
-                                  <a class="nav-link" href="#">Pricing</a>
+                        <p class="menu">Menu</p>
+                        <button class="navbar-toggler" type="button" data-toggle="collapse"
+                            data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+                            aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse div-nav" id="navbarNavDropdown">
+
+                            <!-- Links -->
+
+                            <ul class="navbar-nav ml-auto mr-auto opciones">
+
+                                <li class="nav-item activo">
+                                    <a class="nav-link" href="#">Home<span class="sr-only">(current)</span>
+                                    </a>
                                 </li>
                                 <li class="nav-item dropdown">
-                                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Dropdown link
-                                  </a>
-                                  <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                    <a class="dropdown-item" href="#">Action</a>
-                                    <a class="dropdown-item" href="#">Another action</a>
-                                    <a class="dropdown-item" href="#">Something else here</a>
-                                  </div>
+                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink"
+                                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        Categorias
+                                    </a>
+                                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                        <a class="dropdown-item" href="#">Tegnologia</a>
+                                        <a class="dropdown-item" href="#">Ropa</a>
+                                        <a class="dropdown-item" href="#">ETC</a>
+                                    </div>
                                 </li>
-                              </ul>
-                            </div>
-                          </nav>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Ofertas</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Vender</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Ayuda</a>
+                                </li>
+
+                            </ul>
+                        </div>
+                    </nav>
 
                 </div>
             </div>
 
         </header>
+
+        
+
+        <div class="container">
+            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="img/main_banner1.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/main_banner1.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/main_banner1.jpg" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
+
     </div>
 
 
