Se cambiaron todas las unidades de medida De PX a REM aparte se cambio el color del header

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body>
 
-    <div class="container_fluid color-fondo">
+    <div class="container_fluid">
 
         <div class="container_fluid">
             <header id="cabecera">
@@ -57,7 +57,7 @@
 
                 <!--Cabecera Abajo-->
 
-                <div class="cabecera_abajo">
+                <div class="cabecera_abajo color-fondo">
                     <div class="container">
                         <!--Row Header Abajo -->
                         <div class="row">
@@ -195,8 +195,9 @@
                         <form class="form-inline d-lg-flex ml-auto mr-lg-5 mr-xl-6 my-4 my-lg-0 barra_busqueda">
                             <input class="busqueda form-control form-control-underlined pl-3" type="search"
                                 placeholder="Search" aria-label="Search">
-                            <span><button class="btn_bus btn-underlined py-0" type="submit" style="outline: none;"><i
-                                        id="buscar" class="fas fa-search"></i></button>
+                            <span><button class="btn_bus btn-underlined py-0" type="submit" style="outline: none;">
+                                <i id="buscar" class="fas fa-search"></i>
+                            </button>
                         </form>
 
                         
